# kyrs

./: README.md  pyproject.toml
src/: cards.py  currency_rates.py  decorators.py  greetings.py  home_page.py  main.py  read_excel.py  reports.py  search_simple.py  services.py  spending_by_category.json  stock_prices_from_s&p500.py  top_transaction.py  utils.py  views.py
tests/: spending_by_category.json  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
