[tool.poetry]
name = "project-1-analisting-bank"
version = "0.1.0"
description = ""
authors = ["Nikolay Tarasov <kolya.tarasov333@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
flake8 = "^7.1.0"
isort = "^5.13.2"
black = "^24.4.2"
mypy = "^1.11.0"
pytest = "^8.3.2"
coverage = "^7.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
